# flyr

./: Cargo.toml  README.md
mcp-server/: README.md  flyr-mcp  package.json
src/: error.rs  fetch.rs  lib.rs  main.rs  mcp.rs  model.rs  parse.rs  proto.rs  query.rs  table.rs
tests/: cli_test.rs  parse_test.rs  proto_test.rs  query_test.rs
