[package]
name = "flyr-cli"
version = "1.3.1"
edition = "2021"
description = "Search Google Flights from the terminal"
license = "GPL-3.0"
repository = "https://github.com/guitaripod/flyr"
keywords = ["flights", "google-flights", "travel", "cli", "scraper"]
categories = ["command-line-utilities"]

[[bin]]
name = "flyr"
path = "src/main.rs"

[lib]
name = "flyr"
path = "src/lib.rs"

[dependencies]
wreq = { version = "6.0.0-rc", features = ["cookies", "gzip", "brotli", "deflate", "socks", "query"] }
wreq-util = "3.0.0-rc"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
scraper = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
open = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
